--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://RajaHussain99.github.io/react_portfolio",
+  "homepage": "http://localhost:3000",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
