--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
@@ -48,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "react-scripts": "^5.0.1"
   }
 }
